# finance-advisor

./: .gitignore  LICENSE  README.md  pyproject.toml
src/finance_advisor/: main.py
