[tool.poetry]
name = "finance-advisor"
version = "0.1.0"
description = "A system to help with financial decisions"
authors = ["3lueLightning"]
readme = "README.md"
packages = [{include = "finance_advisor", from = "src"}]

[tool.poetry.dependencies]
python = "^3.12"
python-dotenv = "^1.0.1"
pydantic = "^2.10.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
